2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	some_escapes_accept_newline_delimiters.sh: Add test cases for
	`\A` and test formatted output of escape sequences, not just the
	absence of diagnostics from permitted use of newlines as
	argument delimiters.

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libdriver/input.cpp (do_file): Make use of
	positioning commands before the first page is started fatal
	errors; they suggest ill-formed input.  The 'p' command
	clobbers the vertical position anyway.  (See
	https://bugs.debian.org/421437 for discussion.)

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/pdf.tmac: Add inclusion guard; if a `pdfmark` macro is
	already defined, skip inclusion of this file.  Unfortunately
	there are multiple name collisions with pdfmark.tmac.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp:
	* src/roff/troff/request.h: Trivially refactor.  Boolify
	`interpolate_macro` and `request::invoke`.  Also rename
	parameter `no_next` to `do_not_want_next_token`, exposing
	potentially confusing interface design.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (spring_trap, interpolate_string)
	(interpolate_string_with_args): Improve error diagnostics: when
	a sprung trap or an interpolation fails because it's being
	attempted on a request, say so explicitly and _name_ it.  If the
	argument to the trap-planting request or to a string
	interpolation escape sequence is itself an interpolation, this
	name might not be obvious.  Consider:
	  .wh \n[pos] \*[mac]
	  .em \*[mac]
	  .itc 1 \*[mac]
	  \*[\*[mac]]
	Supplying this information requires no additional overhead.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (interpolate_string): Trivially
	refactor.  Rename function parameter from `s` to `nm` to more